# eclipse

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/eclipse/: CMakeLists.txt  main.cpp  prerequisites.h
src/eclipse/math/: CMakeLists.txt  bbox.cpp  bbox.h  mat4.cpp  mat4.h  math.cpp  math.h  quaternion.cpp  quaternion.h  transform.cpp  transform.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/eclipse/render/: CMakeLists.txt  drawing.h  gl_util.h  interactive_renderer.cpp  interactive_renderer.h  options.h  renderer.cpp  renderer.h  window.cpp  window.h
src/eclipse/renderer/: CMakeLists.txt  default_font.h  window.cpp
src/eclipse/scene/: CMakeLists.txt  bvh_builder.h  bvh_node.cpp  bvh_node.h  bxdf.h  camera.cpp  camera.h  compiler.cpp  compiler.h  known_ior.cpp  known_ior.h  mat_expr.cpp  mat_expr.h  mat_expr_parser.y  mat_expr_scanner.h  mat_expr_scanner.l  material_except.h  material_node.cpp  material_node.h  obj_loader.cpp  obj_loader.h  obj_reader.cpp  obj_reader.h  raw_scene.h  resource.cpp  resource.h  scene.cpp  scene.h  scene_io.cpp  scene_io.h
src/eclipse/scene/compiler/: bvh_builder.h  compiler.cpp  compiler.h  input_scene_types.h
src/eclipse/scene/material/: node.h
src/eclipse/tracer/: CMakeLists.txt  tracer.cpp  tracer.h
src/eclipse/util/: CMakeLists.txt  except.h  file_util.cpp  file_util.h  http_downloader.cpp  http_downloader.h  input_parser.cpp  input_parser.h  log_message.cpp  log_message.h  logger.cpp  logger.h  mpmc_queue.h  resource.cpp  resource.h  stop_watch.cpp  stop_watch.h  texture.cpp  texture.h  thread_pool.h  timer.cpp  timer.h
